force-app/main/default/objects/Api_Callout_Log__c/Api_Callout_Log__c.object-meta.xml
<CustomObject>
    <label>Api Callout Log</label>
    <nameField>
        <label>Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Api Callout Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>