force-app/main/default/objects/Api_Callout_Log__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <label>Reference Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>