force-app/main/default/objects/Api_Callout_Log__c/fields/Server_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Server_Status_Code__c</fullName>
    <label>Server Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>