force-app/main/default/objects/Api_Callout_Log__c/fields/success__c.field-meta.xml
<CustomField>
    <fullName>success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>success</label>
    <type>Checkbox</type>
</CustomField>