force-app/main/default/objects/Api_Callout_Log__c/fields/third_party_Id__c.field-meta.xml
<CustomField>
    <fullName>third_party_Id__c</fullName>
    <label>third party Id</label>
    <length>75</length>
    <type>Text</type>
</CustomField>